# iceoryx2

./: Cargo.toml  README.md  contiguous-chunk-loan-design.md
benchmarks/: README.md
benchmarks/publish-subscribe/src/: main.rs
benchmarks/request-response/src/: main.rs
config/: README.md
doc/design-documents/: blackboard-mpmc.md  hugepages-service-variant.md  log-archive-v2-traceability.md  log-archive-v2.md  log-messaging-pattern.md  pipeline-pattern.md
examples/: Cargo.toml  README.md
examples/c/: CMakeLists.txt
examples/c/blackboard/: README.md
examples/c/pipeline_with_user_header/: BUILD.bazel  CMakeLists.txt  README.md
examples/c/pipeline_with_user_header/src/: custom_header.h  egress.c  ingress.c  worker.c
examples/cxx/: CMakeLists.txt
examples/cxx/blackboard/: README.md
examples/cxx/pipeline_dynamic_user_header/: BUILD.bazel  CMakeLists.txt  README.md
examples/cxx/pipeline_dynamic_user_header/src/: custom_header.hpp  egress.cpp  ingress.cpp  worker.cpp
examples/python/blackboard/: README.md  creator.py
examples/python/pipeline_dynamic_user_header/: README.md  custom_header.py  egress.py  ingress.py  worker.py
examples/rust/blackboard/: README.md  creator.rs
examples/rust/log/: README.md  appender.rs  tailer.rs
examples/rust/log_dynamic_data/: BUILD.bazel  README.md  appender.rs  tailer.rs
examples/rust/log_with_user_header/: BUILD.bazel  README.md  appender.rs  tailer.rs
examples/rust/pipeline/: BUILD.bazel  README.md  egress.rs  ingress.rs  pipeline.rs  worker.rs
examples/rust/pipeline_dynamic_user_header/: BUILD.bazel  README.md  egress.rs  ingress.rs  worker.rs
examples/rust/service_types/: BUILD.bazel  README.md  ipc_hugepages_pubsub.rs  test_e2e_service_types.exp
iceoryx2/: Cargo.toml
iceoryx2-bb/concurrency/src/: spin_lock.rs
iceoryx2-bb/lock-free/tests/: bitset_tests.rs  mpmc_unique_index_set_tests.rs  spmc_unrestricted_atomic_tests.rs  spsc_safely_overflowing_index_queue_tests.rs
iceoryx2-cal/src/dynamic_storage/: hugetlbfs.rs  mod.rs  recommended.rs
iceoryx2-cal/src/resizable_shared_memory/: hugetlbfs.rs  mod.rs  recommended.rs
iceoryx2-cal/src/shared_memory/: common.rs  hugetlbfs.rs  mod.rs  recommended.rs
iceoryx2-cal/src/zero_copy_connection/: used_chunk_list.rs
iceoryx2-cal/tests/: dynamic_storage_hugetlbfs_tests.rs
iceoryx2-cxx/: CMakeLists.txt
iceoryx2-cxx/include/iox2/: attribute_set.hpp  attribute_specifier.hpp  attribute_verifier.hpp  config.hpp  enum_translation.hpp  iceoryx2.hpp  message_type_details.hpp  messaging_pattern.hpp  port_factory_pipeline.hpp  port_factory_publisher.hpp  port_factory_subscriber.hpp  service_builder.hpp  service_builder_blackboard.hpp  service_builder_blackboard_error.hpp  service_builder_pipeline.hpp  service_builder_pipeline_error.hpp  service_id.hpp  service_name.hpp  static_config_blackboard.hpp  static_config_pipeline.hpp
iceoryx2-cxx/src/: config.cpp  messaging_pattern.cpp  static_config_blackboard.cpp  static_config_pipeline.cpp
iceoryx2-cxx/tests/src/: config_tests.cpp  enum_conversion_tests.cpp  node_tests.cpp  service_blackboard_tests.cpp  service_pipeline_tests.cpp  service_tests.cpp  test.hpp
iceoryx2-ffi/python/src/: config.rs  error.rs  lib.rs  messaging_pattern.rs  port_factory_pipeline.rs  port_factory_publisher.rs  port_factory_subscriber.rs  service_builder.rs  service_builder_blackboard.rs  service_builder_pipeline.rs  service_details.rs  static_config_blackboard.rs  static_config_pipeline.rs
iceoryx2-ffi/python/tests/: config_tests.py  service_builder_blackboard_tests.py  service_builder_pipeline_tests.py
iceoryx2-userland/log-archive/: BUILD.bazel  Cargo.toml
iceoryx2-userland/log-archive-sqlite/: Cargo.toml
iceoryx2-userland/log-archive-sqlite/src/: lib.rs
iceoryx2-userland/log-archive-sqlite/tests/: sqlite_sink_tests.rs
iceoryx2-userland/log-archive/examples/: query_to_replay.rs  throughput_profile_benchmark.rs
iceoryx2-userland/log-archive/scripts/: run_throughput_profile_benchmark.sh
iceoryx2-userland/log-archive/src/: lib.rs
iceoryx2-userland/log-archive/src/log_archive/: runtime.rs
iceoryx2-userland/log-archive/src/log_archive/runtime/: backend.rs  common.rs  metadata.rs  mod.rs  recorder.rs  replayer.rs  storage.rs
iceoryx2-userland/log-archive/tests/: log_archive_file_header_tests.rs  log_archive_metadata_indexer_tests.rs  log_archive_phase6_hardening_tests.rs  log_archive_recorder_replayer_tests.rs
iceoryx2/conformance-tests/src/: lib.rs  service_blackboard.rs  service_pipeline.rs
iceoryx2/conformance-tests/tests/: service_pipeline_tests.rs
iceoryx2/src/: config.rs  lib.rs  prelude.rs
iceoryx2/src/node/: mod.rs
iceoryx2/src/port/: appender.rs  blackboard_entry.rs  mod.rs  reader.rs  tailer.rs  writer.rs
iceoryx2/src/service/: config_scheme.rs  ipc_hugepages.rs  ipc_hugepages_threadsafe.rs  messaging_pattern.rs  (+1 more)
iceoryx2/tests/: log_archive_file_header_tests.rs  log_archive_recorder_replayer_tests.rs  service_hugepages_config_tests.rs  service_hugepages_runtime_tests.rs  service_log_thread_safety_tests.rs  service_pipeline_tests.rs
(+52 files in other folders)
