# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache Software License 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0, or the MIT license
# which is available at https://opensource.org/licenses/MIT.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "example_c_pipeline_with_user_header_ingress",
    srcs = [
        "src/custom_header.h",
        "src/ingress.c",
    ],
    deps = [
        "//:iceoryx2-c-static",
    ],
)

cc_binary(
    name = "example_c_pipeline_with_user_header_worker",
    srcs = [
        "src/custom_header.h",
        "src/worker.c",
    ],
    deps = [
        "//:iceoryx2-c-static",
    ],
)

cc_binary(
    name = "example_c_pipeline_with_user_header_egress",
    srcs = [
        "src/custom_header.h",
        "src/egress.c",
    ],
    deps = [
        "//:iceoryx2-c-static",
    ],
)
